# Calliope

./: .gitignore  README.md  UI.py  audio_input.py  frequency_note_conversion.py  pyproject.toml  unit_tests.py
calliope/: UI.py  __main__.py  audio_grading.py  audio_input.py  frequency_note_conversion.py  muse.py  music_queue.py  test.py  twinkle.py  user_interface.py
tests/: unit_tests.py
